--- a/Maischer/Masher.css
+++ b/Maischer/Masher.css
@@ -4,13 +4,20 @@ hmtl, body {
     max-width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
-    margin: 10;
-    padding: 10;
+	margin : 0px;
+
 }
 
 body {
 	font-family: Bradley Hand, cursive;
 	font-size: 12px;
+}
+
+.header {
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 18px;
 }
 
 #wrapper {
@@ -22,12 +29,25 @@ body {
 #myChart {
   flex: 1;
   border: 1px solid black;
+  margin: 10px;
 }
 
 /* A page filling opaque layer that overlays the page to make the inside div 
 containing a popup stand out */
 #configurationPopup{
 	display: none;
+	position: fixed;
+	width:100%;
+	height:100%;
+	background-color: rgba(0,0,0,0.5);
+
+	z-index: 2;
+}
+
+/* A page filling opaque layer that overlays the page to make the inside div 
+containing a popup stand out */
+#selectBrewagePopup{
+	display: inline;
 	position: fixed;
 	width:100%;
 	height:100%;
@@ -61,7 +81,7 @@ containing a popup stand out */
 .flex-container > div{
 	width: 100px;
 	height: 100px;
-	margin: 10px;
+	/*margin: 10px;*/
 	text-align: center;
 }
 
