--- a/Maischer/Masher.css
+++ b/Maischer/Masher.css
@@ -9,7 +9,7 @@ hmtl, body {
 }
 
 body {
-	font-family: Bradley Hand, cursive;
+	/*font-family: Bradley Hand, cursive;*/
 	font-size: 12px;
 }
 
@@ -18,12 +18,16 @@ body {
   background: #1abc9c;
   color: white;
   font-size: 18px;
+  margin: 0;
+  padding: 0;
 }
 
 #wrapper {
   display: flex;  /* use the flex model */
   min-height: 100%;
   flex-direction: column;  /* learn more: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/ */
+    margin: 10;
+    padding: 10;
 }
 
 #myChart {
@@ -34,7 +38,7 @@ body {
 
 /* A page filling opaque layer that overlays the page to make the inside div 
 containing a popup stand out */
-#configurationPopup{
+.popClass{
 	display: none;
 	position: fixed;
 	width:100%;
@@ -42,6 +46,13 @@ containing a popup stand out */
 	background-color: rgba(0,0,0,0.5);
 
 	z-index: 2;
+}
+
+#configurationLayout{
+    z-index: inherit;
+    width:100px;
+	height:100px;
+    background-color: #0066ff;
 }
 
 /* A page filling opaque layer that overlays the page to make the inside div 
@@ -64,7 +75,7 @@ containing a popup stand out */
     left: 50%;
     transform: translate(-50%, 0); 	/* Horizontal centering the flex container itself */
 
-	width: 80%;
+	width: auto;
 	height: auto;
   	padding: 15px;
 
@@ -78,10 +89,39 @@ containing a popup stand out */
 	box-shadow: 0px 20px 20px #000;
 }
 
-.flex-container > div{
+/*.flex-container > div{
 	width: 100px;
 	height: 100px;
-	/*margin: 10px;*/
 	text-align: center;
+}*/
+
+#tempUp{
+    width:50px;
+	height:50px;
+}
+#tempDown{
+    width:50px;
+	height:50px;
+    transform: rotate(180deg);
 }
 
+#userInputSection {
+	 	 float: left;
+}
+
+#tempControl{
+	/*position: absolute;
+	right: 0%;*/
+	float : right;
+	vertical-align: middle
+	/*top: 50%;
+	transform: translate(0%, -50%);s*/
+}
+
+#tempButtons{
+ 	 float: left;
+ 	 vertical-align: middle
+}
+#tempGauge{
+	 float: left;
+}
