--- a/Maischer/Masher.css
+++ b/Maischer/Masher.css
@@ -97,19 +97,28 @@ containing a popup stand out */
 .controlHolder{
     display: inline-block;		
     position: relative;
-    border: 3px solid green; 
+    /*//border: 3px solid green; */
 }
 
 .btn{
     width:100px;
 	height:100px;
-	    border: 3px solid purple; 
+	/*//    border: 3px solid purple; */
 
 }
 
 #startStopHolder{
 	width:400px;
-		height:100px;
+	height:100px;
+}
+#pbStartPID
+{
+	  float: right;
+
+}
+#pbStopPID
+{
+	  float: right;
 
 }
 #tempControl{
@@ -179,7 +188,7 @@ containing a popup stand out */
 }
 
 #userInputSection{
-    border: 3px solid orange; 
+    /*border: 3px solid orange; */
     margin-left: auto;
     margin-right: auto;
 }
